[package]
name = "sociable-weaver"
repository = "https://github.com/albertattard/sociable-weaver"
version = "1.0.0"
edition = "2021"
authors = ["Albert Attard <albertattard@gmail.com>"]

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
once_cell = "1.20.1"
dirs = "5.0.1"

[[bin]]
name = "sw"
path = "src/main.rs"
